Fix app alignment

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,9 @@
+#main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 body {
-    background-color: #e7ebee;
+  background-color: #e7ebee;
 }
